--- a/package.json
+++ b/package.json
@@ -6,9 +6,18 @@
     "@testing-library/jest-dom": "^5.16.0",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.21.4",
+    "bootstrap": "^4.6.1",
+    "country-state-city": "^2.0.0",
+    "framer-motion": "^3.7.0",
+    "node-sass": "^4.14.0",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.6.4",
     "react-dom": "^17.0.2",
-    "react-scripts": "4.0.3",
+    "react-hook-form": "^6.15.4",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "^4.0.3",
+    "sweetalert2": "^10.15.5",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
